Test Sandbox Project/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <externalId>true</externalId>
        <label>Invoice No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Konfirmasi Pembayaran</fullName>
                </value>
                <value>
                    <fullName>Verifikasi Pembayaran</fullName>
                </value>
                <value>
                    <fullName>Dalam Proses</fullName>
                </value>
                <value>
                    <fullName>Dalam Pengiriman</fullName>
                </value>
                <value>
                    <fullName>Transaksi Terkirim</fullName>
                </value>
                <value>
                    <fullName>Transaksi Selesai</fullName>
                </value>
                <value>
                    <fullName>Transaksi Dibatalkan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment ID</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;CASE( Invoice_Status__c , 
&quot;Konfirmasi Pembayaran&quot;, &quot;01528000003OA0a&quot;, 
&quot;Verifikasi Pembayaran&quot;,&quot;01528000003OA22&quot;,
&quot;Dalam Proses&quot;, &quot;01528000003OA19&quot;,
&quot;Dalam Pengiriman&quot;,&quot;01528000003OA0u&quot;,
&quot;Transaksi Terkirim&quot;, &quot;01528000003OA1s&quot;, 
&quot;Transaksi Selesai&quot;,&quot;01528000003OA1T&quot;,
&quot;Transaksi Dibatalkan&quot;,&quot;01528000003OA1i&quot;,
&quot;01528000003OA1i&quot;),&quot;Status&quot;,56,130)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Order__c</fullName>
        <label>Total Order</label>
        <summaryForeignKey>Customer_Order__c.Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_No__c</columns>
        <columns>Invoice_Status__c</columns>
        <columns>Payment_ID__c</columns>
        <columns>Progress__c</columns>
        <columns>Total_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV{00}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>